[package]
name = "delta-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

deltalake = { path = "../delta-rs/crates/deltalake", features = ["azure", "datafusion-ext"] }
tokio = "1.37.0"
reqwest = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.11.3"
log = "0.4.21"
num_cpus = "1.16.0"
serde_json = "1.0.116"
